--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@notionhq/client": "^2.0.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.0.3",
+    "@types/pg": "^8.6.5",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
